# karak-rs

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  rustfmt.toml
.github/workflows/: check-semver.yml  ci.yml
crates/bls/: Cargo.toml
crates/bls/src/: keypair_signer.rs  registration.rs  signature.rs
crates/bls/tests/: bytecode.rs  registration.rs
crates/bls/tests/artifacts/Verify/: abi.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  common.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  model.rs  prompter.rs  shared.rs  types.rs  util.rs
crates/cli/src/bls/: mod.rs
crates/cli/src/bls/processor/: aggregate.rs  mod.rs  sign.rs  verify.rs
crates/cli/src/components/: mod.rs
crates/cli/src/components/dss/: bls.rs  keypair.rs  mod.rs
crates/cli/src/components/operator/: mod.rs  register.rs
crates/cli/src/config/: env.rs  mod.rs  utils.rs
crates/cli/src/config/models/: mod.rs
crates/cli/src/config/processor/: get.rs  init.rs  mod.rs  prompt.rs  set.rs  update.rs
crates/cli/src/keypair/: mod.rs
crates/cli/src/keypair/processor/: add.rs  generate.rs  list.rs  mod.rs  prompt.rs  pubkey.rs
crates/cli/src/operator/: mod.rs
crates/cli/src/operator/processor/: dss.rs  erc20.rs  mod.rs  prompt.rs  registration.rs  registry.rs  stake.rs  vault.rs
crates/cli/src/root/: mod.rs  processor.rs
crates/contracts/: Cargo.toml  README.md
crates/contracts/abi/: Core.json  ICore.json  IStakeViewer.json  Operator.json  RestakingRegistry.json  SafeTransferLib.json
crates/contracts/src/: error.rs  lib.rs  registration.rs  registry.rs  vault.rs
crates/contracts/src/core/: contract.rs  interface.rs  mod.rs
crates/contracts/src/erc20/: contract.rs  interface.rs  library.rs  mintable.rs  mod.rs
crates/contracts/src/stake_viewer/: interface.rs
crates/contracts/tests/: CoreByteCode.json  core.rs  registration.rs
crates/contracts/tests/artifacts/: BN254.json  BlsSdk.json
crates/karak-rs/: Cargo.toml
crates/karak-rs/src/: lib.rs
crates/kms/: Cargo.toml
crates/kms/src/: lib.rs
crates/kms/src/encryption/: mod.rs
crates/kms/src/keypair/: mod.rs
crates/kms/src/keypair/bn254/: mod.rs  pubkey.rs
crates/kms/src/keypair/bn254/algebra/: g1.rs  g2.rs
crates/kms/src/keypair/bn254/bls/: keypair_signer.rs  mod.rs  registration.rs  signature.rs
crates/kms/src/keystore/: aws.rs  gcp.rs  local.rs  mod.rs
crates/kms/src/signer/: mod.rs  traits.rs
crates/kms/src/signer/bls/: mod.rs  signature.rs
crates/kms/src/web3/: mod.rs
crates/kms/tests/: registration.rs
crates/kms/tests/artifacts/: BN254.json  BlsSdk.json
crates/kms/tests/artifacts/Verify/: abi.json  bytecode.json
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs  main.rs
crates/sdk/: Cargo.toml
crates/sdk/src/keypair/: traits.rs
crates/sdk/src/keypair/bn254/: encryption.rs  mod.rs  pubkey.rs
crates/sdk/src/keypair/bn254/algebra/: g1.rs  g2.rs  mod.rs
crates/sdk/src/keystore/: aws.rs  gcp.rs  local.rs  mod.rs  traits.rs
crates/sdk/src/signer/: traits.rs
crates/sdk/src/signer/bls/: keypair_signer.rs  mod.rs  signature.rs
karak-cli/: Cargo.toml
karak-cli/src/: main.rs
karak-sdk/src/: lib.rs
karak-sdk/src/keypair/: traits.rs
karak-sdk/src/signer/: traits.rs
