[package]
name = "karak-cli"
license = { workspace = true }
description = "Karak CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true, features = ["full", "signer-keystore"] }
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.46.0"
base64 = "0.22.1"
bs58 = "0.5.1"
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
dirs-next = "2.0.0"
hex = "0.4.3"
karak-bls = { path = "../bls" }
karak-contracts = { path = "../contracts" }
karak-kms = { path = "../kms" }
rand = "0.8.5"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
signature = "2.2.0"
thiserror = "1.0.63"
tokio = { workspace = true }
url = "2.5.2"

[[bin]]
name = "karak"
path = "src/main.rs"
