[package]
name = "karak-cli"
license = { workspace = true }
description = "Karak CLI"
version = "0.2.1"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true, features = [
    "full",
    "signer-aws",
    "signer-keystore",
] }
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.47.0"
aws-sdk-secretsmanager = "1.46.0"
base64 = "0.22.1"
bs58 = "0.5.1"
clap = { version = "4.5.17", features = ["color", "derive"] }
color-eyre = "0.6.3"
dialoguer = "0.11.0"
dirs-next = "2.0.0"
eyre = "0.6.12"
hex = "0.4.3"
karak-contracts = { workspace = true }
karak-kms = { workspace = true }
rand = "0.8.5"
rpassword = "7.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = "0.10"
signature = "2.2.0"
thiserror = "1.0.63"
tokio = { workspace = true }
url = "2.5.2"

[[bin]]
name = "karak"
path = "src/main.rs"

[features]
testnet = []
