[package]
name = "karak-contracts"
license = { workspace = true }
description = "Karak Contracts"
version = "0.2.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
eyre = "0.6.12"
trait-variant = "0.1.2"

[dev-dependencies]
alloy = { version = "0.3.3", features = ["node-bindings"] }
eyre = "0.6.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { workspace = true }
