[package]
name = "karak-contracts"
license = { workspace = true }
description = "Karak Contracts"
version = "0.2.1"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
eyre = "0.6.12"
serde.workspace = true
trait-variant = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
