[package]
name = "karak-rs"
license = { workspace = true }
description = "Karak Rust SDK"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
karak-bls = { version = "0.2.0", path = "../bls" }
karak-contracts = { version = "0.2.0", path = "../contracts" }
karak-kms = { version = "0.2.0", path = "../kms" }
