[package]
name = "karak-rs"
license = { workspace = true }
description = "Karak Rust SDK"
version = "0.2.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
karak-contracts = { workspace = true }
karak-kms = { workspace = true }
karak-bls = { version = "0.1.1", path = "../bls" }
karak-p2p = { version = "0.1.1", path = "../p2p" }
