[package]
name = "karak-rs"
license = { workspace = true }
description = "Karak Rust SDK"
version = "0.2.2"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
karak-contracts = { workspace = true }
karak-kms = { workspace = true }
karak-p2p = { workspace = true }
