[package]
name = "karak-p2p"
license = { workspace = true }
description = "Karak P2P SDK"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.release]
release = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
libp2p = { version = "0.54.1", features = [ "tokio", "gossipsub", "kad", "noise", "macros", "tcp", "yamux", "quic", "dns"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
