[package]
name = "karak-p2p"
license = { workspace = true }
description = "Karak P2P SDK"
version = "0.2.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
libp2p = { version = "0.54.1", features = [ "tokio", "gossipsub", "kad", "noise", "macros", "tcp", "yamux", "quic", "dns"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
thiserror = "1.0.63"
