[package]
name = "karak-sdk"
description = "Karak SDK"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
rand = "0.8.5"
# TODO: Update to latest versions of these
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = { version = "0.7", features = ["ctr"] }
block-modes = "0.8"
scrypt = "0.10"
hex = "0.4"
sha3 = "0.10"
bs58 = "0.5.1"
thiserror = "1.0.63"
bincode = "1.3.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.40.0"
tokio = { workspace = true }
